# SymbolicMind

./: .gitignore  BENCHMARKS.md  CONTRIBUTING.md  LICENSE  LIMITATIONS.md  README.md  STRATEGIC_REPORT.md  mcp_config.json  mcp_http_server.py  mcp_server.py  phaseD_corpus_clean.txt  pyproject.toml  quickstart.py  smithery.yaml
colab/: SymbolicMind.ipynb
memory/: cde_experience.json
symbolimind/: __init__.py  aira_modules.py  brain.py  engine.py  ext22_period_discovery.py  ext23_massive_search.py  ext23_million_search.py  ext24_integral_sindy.py  extensions.py  extensions_clean.py  grammar.py  memory.py  phaseD_transformer.py  skill.py  unified.py
tests/: test_memory.py
