[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symbolimind"
version = "0.3.3"
description = "AI-powered symbolic regression engine that discovers governing equations from data."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "SymbolicMind Team"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["symbolic-regression", "physics", "ai", "machine-learning", "science"]
requires-python = ">=3.9"
dependencies = ["numpy", "scipy", "scikit-learn"]

[project.urls]
Homepage = "https://github.com/d87skg/SymbolicMind"
Repository = "https://github.com/d87skg/SymbolicMind.git"
Issues = "https://github.com/d87skg/SymbolicMind/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["symbolimind*"]
